# aoc

./: .gitignore  Cargo.toml  LICENCE  create_day.nu
aoc-runner/: Cargo.toml
aoc-runner/src/: main.rs
crates/2015/1/: Cargo.toml
crates/2015/1/benches/: bench.rs
crates/2015/1/src/: lib.rs
crates/2015/2/: Cargo.toml
crates/2015/2/benches/: bench.rs
crates/2015/2/src/: lib.rs
crates/2015/3/: Cargo.toml
crates/2015/3/benches/: bench.rs
crates/2015/3/src/: lib.rs
crates/2015/4/: Cargo.toml
crates/2015/4/src/: lib.rs
crates/2015/5/: Cargo.toml
crates/2015/5/benches/: bench.rs
crates/2015/5/src/: lib.rs
crates/2015/6/: Cargo.toml
crates/2015/6/src/: lib.rs
crates/2015/7/: Cargo.toml
crates/2015/7/src/: lib.rs
crates/2022/1/: Cargo.toml
crates/2022/1/src/: lib.rs
crates/2022/2/: Cargo.toml
crates/2022/2/src/: lib.rs
helper/: Cargo.toml
helper/src/: lib.rs
template/: Cargo.toml
template/benches/: bench.rs
template/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
