[workspace]
members = ["crates/2015/*"]

[workspace.dependencies]
anyhow = "1.0.65"
itertools = "0.10.5"
brunch = "0.3.6"
petgraph = "0.6.2"

[profile.dev.package]
itertools.opt-level = 3
anyhow.opt-level = 3
petgraph.opt-level = 3
brunch.opt-level = 3

[profile.dev]
debug = 0
incremental = true
strip = "symbols"

[profile.release]
lto = "thin"
debug = 0
strip = "symbols"
panic = "abort"
codegen-units = 1
