[workspace]
members = ["crates/2015/*"]

[workspace.dependencies]
anyhow = "1.0.65"
thiserror = "1.0.37"
itertools = "0.10.5"
brunch = "0.3.6"
petgraph = "0.6.2"
lazy-regex = "2.3.0"
fancy-regex = "0.10.0"
once_cell = "1.15.0"
nom = "7.1.1"

[profile.dev]
# debug = 0
incremental = true
# strip = "symbols"
codegen-units = 512
# panic = "abort"

[profiles.dev-deps]
opt-level = 2
debug = false
debug-assertions = true

[profile.release]
lto = "thin"
debug = 0
strip = "symbols"
panic = "abort"
