[workspace]
members = ["aoc-runner", "tests", "helper", "crates/*/*"]
resolver = "2"

[workspace.dependencies]
helper = { path = "helper", version = "*" }
anyhow = "1.0.65"
thiserror = "1.0.37"
itertools = "0.10.5"
petgraph = "0.6.2"
lazy-regex = "2.3.0"
fancy-regex = "0.10.0"
once_cell = "1.15.0"
nom = "7.1.1"

[profile.dev]
incremental = true
codegen-units = 512
debug = 0
strip = "symbols"

[profile.release]
lto = "thin"
strip = "symbols"


# Optimize dependencies.
[profile.dev.package]
anyhow.opt-level = 1
thiserror.opt-level = 1
itertools.opt-level = 1
fancy-regex.opt-level = 1

[profile.test.package]
anyhow.opt-level = 1
thiserror.opt-level = 1
itertools.opt-level = 1
fancy-regex.opt-level = 1
