[package]
authors = ["Filip Andersson"]
license = "MIT"
name = "aoc-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helper = { workspace = true }

"aoc-2015-1" = { path = "../crates/2015/1", version = "*"}
"aoc-2015-2" = { path = "../crates/2015/2", version = "*"}
"aoc-2015-3" = { path = "../crates/2015/3", version = "*"}
"aoc-2015-4" = { path = "../crates/2015/4", version = "*"}
"aoc-2015-5" = { path = "../crates/2015/5", version = "*"}
"aoc-2015-6" = { path = "../crates/2015/6", version = "*"}
"aoc-2015-7" = { path = "../crates/2015/7", version = "*"}

"aoc-2022-1" = { path = "../crates/2022/1", version = "*"}
