[package]
name = "§name§"
version = "0.0.0"
authors = ["Filip Andersson"]
description = "Advent of code §year§, day §day§"
license = "MIT"
edition = "2021"

[lib]
doctest = false


[dependencies]
helper = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
fancy-regex = { workspace = true, default-features = false}
