[package]
name = "aoc_2015_2"
version = "0.0.0"
authors = ["Filip Andersson"]
description = "Advent of code 2015, day 2"
license = "MIT"
edition = "2021"

[lib]
doctest = false

[[bench]]
name = "bench"
harness = false

[dev-dependencies.criterion]
git = "https://github.com/bheisler/criterion.rs"
branch = "version-0.4"
default-features = false
features = []


[dependencies]
itertools = "0.10.3"
anyhow = "1.0.56"
