[package]
name = "aoc_2015_3"
version = "0.0.0"
authors = ["Filip Andersson"]
description = "Advent of code 2015, day 3"
license = "MIT"
edition = "2021"

[lib]
doctest = false

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
brunch = { workspace = true }


[dependencies]
anyhow = { workspace = true }
