[package]
name = "aoc-2015-5"
version = "0.0.0"
authors = ["Filip Andersson"]
description = "Advent of code 2015, day 5"
license = "MIT"
edition = "2021"

[lib]
doctest = false


[dependencies]
helper = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
fancy-regex = { workspace = true, default-features = false }
once_cell = { workspace = true }
